@@ -1,4 +1,5 @@
-06292013 -> jonnyboy ->	changed progessive sleep time to use min sleep timer if timer would be less than that
+06292013 -> jonnyboy ->	fixed backfill safe loop over completed groups
+						changed progessive sleep time to use min sleep timer if timer would be less than that
 						renamed patch
 						added blank line to robot.txt
 						replaced && with ; because python scripts exit  and sleeps were not working
